<resources>
    <string name="app_name">Sensor Logger</string>
    <string name="title_activity_settings">Settings</string>

    <string name="app_folder">SensorLogger</string>
    <string name="gif_recording">Recording starts in 3 seconds</string>

    <string name="toast_recording_stop">Recording stopped</string>
    <string name="toast_recording_interrupted">Recording interrupted</string>
    <string name="toast_recording_offlimits">Recording reached maximum length</string>
    <string name="toast_recording_endofstream">Recording stopped (end of streaming)</string>

    <!-- Strings related to Settings -->
    <string-array name="pref_logtarget_list_titles">
        <item>Disabled</item>
        <item>Images</item>
        <item>Data</item>
        <item>Both</item>
    </string-array>
    <string-array name="pref_logtarget_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Settings -> FTP -->
    <string name="pref_ftp_header">FTP</string>

    <string name="pref_ftp_title">Enable Image FTP Upload</string>
    <string name="pref_ftp_description">The data logged will be transferred through FTP to a remote server: %s</string>

    <string name="pref_ftp_address_title">Host address</string>
    <string name="pref_ftp_user_title">Username</string>
    <string name="pref_ftp_pw_title">Password</string>

    <string name="pref_ftp_skip_title">Skip frames</string>
    <string name="pref_ftp_skip_description">Log images skipping %s frames</string>

    <!-- Settings -> it.francescogabbrielli.streamingserver.StreamingThreadThread -->
    <string name="pref_streaming_header">Streaming</string>
    <string name="pref_streaming_title">Enable Streaming</string>
    <string name="pref_streaming_description">The data will be streamed over HTTP: %s</string>
    <string name="pref_streaming_port_title">Port</string>
    <string name="pref_streaming_port_description">Start streaming server on port %s</string>
    <string name="pref_streaming_record_title">Record on streaming</string>
    <string name="pref_streaming_record_description">Start/onStopStreaming streaming on a remote streaming request</string>

    <!-- Settings -> Logging -->
    <string name="pref_logging_header">Logging</string>

    <string name="pref_logging_rate_title">Sampling rate</string>
    <string name="pref_logging_rate_description">Log images and/or sensor readings with a frequency of %s</string>

    <string name="pref_logging_conf_title">Output Configuration</string>

    <string-array name="pref_logging_rate_list_titles">
        <item>25 fps</item>
        <item>20 fps</item>
        <item>15 fps</item>
        <item>10 fps</item>
        <item>5 fps</item>
        <item>2 fps</item>
        <item>1 fps</item>
    </string-array>
    <string-array name="pref_logging_rate_list_values">
        <item>40000000</item>
        <item>50000000</item>
        <item>66666667</item>
        <item>100000000</item>
        <item>200000000</item>
        <item>500000000</item>
        <item>1000000000</item>
    </string-array>

    <string name="pref_logging_headers_title">Log Headers</string>
    <string name="pref_logging_headers_description">Print the headers row in the output file</string>

    <string name="pref_logging_time_title">Log time</string>
    <string name="pref_logging_time_description">Print time in the first column of the output file</string>

    <string name="pref_logging_timestamp_title">Filename timestamp</string>
    <string name="pref_logging_timestamp_description">Append timestamp to the output filename (if any)</string>

    <string name="pref_file_header">File</string>
    <string name="pref_file_title">Save frames/data to a local folder</string>
    <string name="pref_file_description">The data will be saved in the local filesystem: %s</string>

    <!-- Settings -> Sensors -->
    <string name="pref_sensors_header">Sensors</string>
    <string name="pref_sensors_title_sync_frequency">Sync frequency</string>

    <string name="pref_rotations_header">Rotations</string>
    <string-array name="pref_rotation_list_titles">
        <item>0</item>
        <item>\u03C0/2</item>
        <item>\u03C0</item>
        <item>3\u03C0/2</item>
    </string-array>
    <string-array name="pref_rotation_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_rotation_x_title">X-Rotation</string>
    <string name="pref_rotation_x_description">Rotate X-Axis by %s clockwise</string>
    <string name="pref_rotation_y_title">Y-Rotation</string>
    <string name="pref_rotation_y_description">Rotate Y-Axis by %s clockwise</string>
    <string name="pref_rotation_z_title">Z-Rotation</string>
    <string name="pref_rotation_z_description">Rotate Z-Axis by %s clockwise</string>

    <!-- Settings -> Frame Capture -->
    <string name="pref_capture_header">Frame Capture</string>

    <string name="pref_capture_camera_title">Camera</string>
    <string name="pref_capture_camera_description">Capture frames from the main camera present on the device</string>

    <string name="pref_capture_imgformat_title">Image Format</string>
    <string name="pref_capture_imgformat_description">Save images as %s</string>
    <string-array name="pref_capture_imgformat_list_titles">
        <item>PNG</item>
        <item>JPEG</item>
    </string-array>
    <string-array name="pref_capture_imgformat_list_values">
        <item>.png</item>
        <item>.jpg</item>
    </string-array>

    <string name="pref_capture_screen_title">Screen</string>
    <string name="pref_capture_screen_description">Capture device\'s screen</string>

    <string name="pref_capture_sound_title">Play sound</string>
    <string name="pref_capture_sound_description">Play sounds on record operations</string>

    <!-- Settings -> Help -->
    <string name="pref_help_header">Help</string>
    <string name="pref_help_reset_title">Reset Settings</string>
    <string name="pref_help_reset_description">Reset default settings</string>

    <string name="alert_permission_denied">WARNING! Denying the permission will set this preference back to its default</string>
</resources>
