<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_rotations_header">
        <ListPreference
            android:key="pref_rotation_x"
            android:entries="@array/pref_rotation_list_titles"
            android:entryValues="@array/pref_rotation_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_rotation_x_title"
            android:summary="@string/pref_rotation_x_description" />
        <ListPreference
            android:key="pref_rotation_y"
            android:entries="@array/pref_rotation_list_titles"
            android:entryValues="@array/pref_rotation_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_rotation_y_title"
            android:summary="@string/pref_rotation_y_description" />
        <ListPreference
            android:key="pref_rotation_z"
            android:entries="@array/pref_rotation_list_titles"
            android:entryValues="@array/pref_rotation_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_rotation_z_title"
            android:summary="@string/pref_rotation_z_description" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sensors_header">

    </PreferenceCategory>

</PreferenceScreen>
