<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pref_ftp"
        android:title="@string/pref_ftp_title"
        android:summary="@string/pref_ftp_description"
        />

    <EditTextPreference
        android:dependency="pref_ftp"
        android:key="pref_ftp_address"
        android:title="@string/pref_ftp_address_title"
        />
    <EditTextPreference
        android:dependency="pref_ftp"
        android:key="pref_ftp_user"
        android:title="@string/pref_ftp_user_title"
        />
    <EditTextPreference
        android:dependency="pref_ftp"
        android:key="pref_ftp_pw"
        android:inputType="textPassword"
        android:password="true"
        android:title="@string/pref_ftp_pw_title"
        />

</PreferenceScreen>