<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="pref_capture_camera"
        android:title="@string/pref_capture_camera_title"
        android:summary="@string/pref_capture_camera_description"/>

    <ListPreference
        android:key="pref_capture_imgformat"
        android:entries="@array/pref_capture_imgformat_list_titles"
        android:entryValues="@array/pref_capture_imgformat_list_values"
        android:title="@string/pref_capture_imgformat_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="pref_capture_sound"
        android:defaultValue="false"
        android:title="@string/pref_capture_sound_title"
        android:summary="@string/pref_capture_sound_description"/>

</PreferenceScreen>
