<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="100"
        android:key="pref_logging_rate"
        android:entries="@array/pref_logging_rate_list_titles"
        android:entryValues="@array/pref_logging_rate_list_values"
        android:title="@string/pref_logging_rate_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />

    <ListPreference
        android:defaultValue="1000"
        android:key="pref_logging_update"
        android:entries="@array/pref_logging_update_list_titles"
        android:entryValues="@array/pref_logging_update_list_values"
        android:title="@string/pref_logging_update_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />

    <ListPreference
        android:defaultValue="5000"
        android:key="pref_logging_length"
        android:entries="@array/pref_logging_update_list_titles"
        android:entryValues="@array/pref_logging_update_list_values"
        android:title="@string/pref_logging_length_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_logging_headers"
        android:title="@string/pref_logging_headers_title"
        android:summary="@string/pref_logging_headers_description"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_logging_time"
        android:title="@string/pref_logging_time_title"
        android:summary="@string/pref_logging_time_description"/>

</PreferenceScreen>
